--- a/main.css
+++ b/main.css
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: row;
   font-size: 14px;
+  justify-content: space-between;
+  align-content: center;
 }
 
 .nav {
@@ -11,4 +13,56 @@
 .image-text {
   display: flex;
   flex-direction: row;
+}
+
+.aside-search {
+  background-color: #f6f8fa;
+}
+
+.flex-column {
+  margin-top: 32px;
+  padding: 0 32px;
+}
+
+.btn-primary {
+  background-color: #2da44e;
+  height: 28px;
+  padding: 3px 12px;
+}
+
+.aside-top-text {
+  font-size: 14px;
+}
+
+.aside-left {
+  max-width: 350px;
+}
+
+.links {
+  height: 16px;
+  width: 16px;
+}
+
+.pages {
+  color: #24292f;
+}
+
+.pages:hover {
+  text-decoration: underline;
+  color: #24292f;
+}
+
+h1 {
+  font-size: 32px;
+}
+
+.center {
+  padding: 0 24px;
+  margin-top: 16px;
+}
+
+.right {
+  padding: 0 24px;
+  margin-top: 32px;
+  max-width: 350px;
 }
