--- a/main.css
+++ b/main.css
@@ -1,4 +1,5 @@
 .left-aside-head {
+  margin-bottom: 4px;
   display: flex;
   flex-direction: row;
   font-size: 14px;
@@ -17,6 +18,11 @@
 
 .aside-search {
   background-color: #f6f8fa;
+ padding: 5px 12px;
+}
+
+.search-place{
+  margin: 8px 0 16px 0;
 }
 
 .flex-column {
@@ -60,6 +66,7 @@ h1 {
   padding: 0 24px;
   margin-top: 16px;
 }
+
 
 .right {
   padding: 0 24px;
