--- a/main.css
+++ b/main.css
@@ -11,9 +11,10 @@
   border-right: 1px solid #24292f;
 }
 
-.image-text {
+.start {
   display: flex;
   flex-direction: row;
+  height: 21px;
 }
 
 .aside-search {
@@ -65,6 +66,66 @@ h1 {
 .center {
   padding: 0 24px;
   margin-top: 16px;
+}
+
+.cards{
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
+
+.create-repository{
+  display: flex;
+  flex-direction: row;
+}
+
+.advice{
+  display: flex;
+  flex-direction: column;
+ width: 50%;
+ height: 50%;
+ border: 1px solid #d0d7de;
+}
+
+.advice-search{
+  display: flex;
+  flex-direction: row;
+}
+
+.profile-box{
+  display: flex;
+  height: 80%;
+  width: 80%;
+  border: 1px solid #d0d7de;
+}
+.profile-box{
+  display: flex;
+  flex-direction: column;
+
+}
+
+.create-readme{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+
+}
+
+.about-me{
+  display: flex;
+  flex: 1;
+  border-top: 1px solid #afb8c1;
+  background-color: #f6f8fa;
+
+}
+
+.numbers{
+  display: flex;
+  flex-direction: column;
+}
+.list{
+  display: flex;
+  flex-direction: row;
 }
 
 
