--- a/main.css
+++ b/main.css
@@ -143,18 +143,32 @@ h1 {
   align-items: center ;
 }
 
-.cards-top{
+.block-top{
+  display: flex;
+
+
+}
+
+/* .card{
+  display: flex;
+
+} */
+
+.cards-middle{
   display: flex;
   width: 100%;
-  height: 50%;
+  height: 138px;
+  justify-content: space-between;
+
 }
 
 .cards-bottom{
   display: flex;
   width: 100%;
-  height: 50%;
-}
+  height: 226px;
+  justify-content: space-between;
 
+}
 .info{
   padding: 16px;
   display: flex;
@@ -173,7 +187,7 @@ h1 {
   padding: 16px;
   display: flex;
   flex-direction: column;
- width: 50%;
+ width: 100%;
  height: 100%;
  border: 1px solid #d0d7de;
 }
