--- a/main.css
+++ b/main.css
@@ -28,7 +28,7 @@
 .start {
   display: flex;
   flex-direction: row;
-  height: 21px;
+  height: 32px;
   color: #57606a;
 }
 
@@ -180,6 +180,9 @@ h1 {
 .create-repository{
   display: flex;
   flex-direction: row;
+  align-items: center;
+  margin: 16px 0;
+  height: 28px;
 }
 
 .card{
@@ -197,7 +200,10 @@ h1 {
   flex-direction: column;
  width: 100%;
  height: 100%;
+ font-size: 12px;
+ font-family: -apple-system,"Segoe UI","Noto Sans",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
 }
+
 
 .choose-type{
   display: flex;
@@ -231,18 +237,33 @@ h1 {
   height: 80%;
   width: 80%;
   border: 1px solid #d0d7de;
+  border-radius:5%;
 }
+
 .profile-box{
   display: flex;
   flex-direction: column;
 
 }
 
+h5{
+  margin-bottom: 8px;
+  font-weight: 600;
+  font-size: 14px;
+}
+
 .create-readme{
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
+  padding: 8px 16px;
+  font-size: 12px;
 
+}
+
+.my-nick{
+  font-family: ui-monospace,monospace;
 }
 
 .about-me{
@@ -250,6 +271,7 @@ h1 {
   flex: 1;
   border-top: 1px solid #afb8c1;
   background-color: #f6f8fa;
+  padding: 8px 0;
 
 }
 
@@ -257,14 +279,33 @@ h1 {
   display: flex;
   flex-direction: column;
 }
+
 .list{
   display: flex;
   flex-direction: row;
+  height: 20px;
+  font-size: 12px;
+  font-family: ui-monospace,monospace;
 }
 
+
+.num{
+  padding: 0 10px;
+  /* min-width: 36px; */
+}
+
+.iam-text{
+  word-wrap:break-word;
+  height: 20px;
+  margin: 0;
+}
 
 .right {
   padding: 0 24px;
   margin-top: 32px;
   max-width: 350px;
 }
+
+/* p{
+  margin: 0;
+} */
