--- a/header.css
+++ b/header.css
@@ -11,7 +11,7 @@
 }
 
 .brand-logo {
-  margin: -4px 16px -4px 0;
+  margin: -4px 16px -4px 3px;
 }
 
 .searchline {
@@ -30,7 +30,7 @@
 }
 
 .container-fluid {
-  padding: 0 0 0 12px;
+  padding: 0;
 }
 
 .avatar {
