--- a/main.css
+++ b/main.css
@@ -7,7 +7,7 @@
 
 .aside-left {
   background-color: #ffffff;
-  padding: 0 32px;
+  padding: 0 32px 0 45px;
   max-width: 350px;
   border-right: 1px solid #d0d7de;
 }
@@ -19,6 +19,12 @@
   font-size: 14px;
   justify-content: space-between;
   align-content: center;
+}
+
+.aside-button{
+ padding:3px 12px;
+ background-color: #2da44e;
+ border-radius: 5px;
 }
 
 .start {
@@ -38,6 +44,8 @@
 .aside-search {
   background-color: #f6f8fa;
  padding: 5px 12px;
+ height: 32px;
+ width: 100%;
 }
 
 .search-place{
@@ -56,7 +64,8 @@
 }
 
 .aside-top-text {
-
+  display: flex;
+  align-content: center;
   font-size: 14px;
   line-height: 21px;
 }
