--- a/main.css
+++ b/main.css
@@ -8,7 +8,7 @@
 .aside-left {
   background-color: #ffffff;
   padding: 0 32px 0 45px;
-  max-width: 350px;
+  max-width: 363px;
   border-right: 1px solid #d0d7de;
 }
 
@@ -36,16 +36,32 @@
   text-align: center;
 }
 
-.normal-text{
+.title-text{
   margin: 0;
   font-weight: 400px;
+  font-size: 14px;
+}
+
+.normal-text{
+  font-size: 14px;
+  color: #57606a;
+}
+
+.username{
+  width: 60px;
 }
 
 .aside-search {
   background-color: #f6f8fa;
  padding: 5px 12px;
  height: 32px;
- width: 100%;
+}
+
+.card-aside-search{
+  background-color: #f6f8fa;
+  padding: 5px 12px;
+  height: 32px;
+  width: 100%;
 }
 
 .search-place{
@@ -117,7 +133,7 @@ h1 {
 }
 
 .center {
-  padding: 0 60px 0 45px;
+  padding: 0 60px 0 32px;
   margin-top: 32px;
 }
 
@@ -158,12 +174,16 @@ h1 {
 
 .block-top{
   display: flex;
-margin-top: 5px;
+ margin-top: 5px;
+ gap: 13px;
 
 }
 
 .card{
   border: 1px solid #d0d7de;
+  padding: 0 8px;
+  width: 100%;
+  height: 100%;
 }
 
 .cards-middle{
@@ -198,12 +218,6 @@ margin-top: 5px;
   height: 28px;
 }
 
-.card{
- margin: 0 8px;
- width: 100%;
- height: 100%;
-}
-
 .card-body{
   padding: 16px;
 }
@@ -234,8 +248,13 @@ margin-top: 5px;
 }
 
 .create-button{
-
-
+padding: 3px 12px;
+font-size: 12px;
+font-weight: 500;
+border-radius: 6px;
+max-width: 50%;
+background-color: #2da44e;
+height: 28px;
 }
 
 
@@ -247,8 +266,8 @@ margin-top: 5px;
 
 .profile-box{
   display: flex;
-  height: 80%;
-  width: 80%;
+  height: 100%;
+  width: 100%;
   border: 1px solid #d0d7de;
   border-radius:5%;
 }
