--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 
 .main{
   background-color: #f6f8fa;
-  height: 800px;
+  height: 2000px;
 }
 
 
@@ -10,6 +10,7 @@
   padding: 0 32px 0 45px;
   max-width: 363px;
   border-right: 1px solid #d0d7de;
+  max-height: 2000px;
 }
 
 .left-aside-head {
@@ -19,6 +20,13 @@
   font-size: 14px;
   justify-content: space-between;
   align-content: center;
+}
+
+.inside-elements{
+  position: sticky;
+  top: 0;
+  bottom: 0;
+  z-index: 30;
 }
 
 .aside-button{
@@ -46,8 +54,15 @@
   color: #57606a;
 }
 
+.text-bold{
+  font-weight: 600;
+}
+
 .username{
-  width: 60px;
+ width: 60px;
+ font-size: 14px;
+ color: #24292f;
+ margin-right: 8px;
 }
 
 .aside-search {
@@ -56,15 +71,21 @@
  height: 32px;
 }
 
-.card-aside-search{
+.card-search{
   background-color: #f6f8fa;
-  padding: 5px 12px;
-  height: 32px;
-  width: 100%;
+  padding: 3px 12px;
+  height: 28px;
+  width: 97%;
+  background-color: #ffffff;
 }
 
-.search-place{
+.search-place-aside{
   margin: 8px 0 16px 0;
+  padding: 0;
+}
+
+.search-place-card{
+  padding: 0;
 }
 
 .flex-column {
@@ -174,8 +195,25 @@ h1 {
 
 .block-top{
   display: flex;
- margin-top: 5px;
+ margin-top: 10px;
  gap: 13px;
+
+}
+
+.block-middle{
+  display: flex;
+  width: 100%;
+  height: 138px;
+  justify-content: space-between;
+  margin-top: 10px;
+}
+
+.block-bottom{
+  display: flex;
+  width: 100%;
+  height: 226px;
+  justify-content: space-between;
+  margin-top: 10px;
 
 }
 
@@ -186,21 +224,12 @@ h1 {
   height: 100%;
 }
 
-.cards-middle{
-  display: flex;
-  width: 100%;
-  height: 138px;
-  justify-content: space-between;
-
+.get-started{
+width: 50%;
 }
 
-.cards-bottom{
-  display: flex;
-  width: 100%;
-  height: 226px;
-  justify-content: space-between;
 
-}
+
 .info{
   padding: 16px;
   display: flex;
@@ -238,7 +267,6 @@ h1 {
 
 }
 
-
 .public{
 
 }
@@ -262,6 +290,7 @@ height: 28px;
 .row{
   display: flex;
   flex-direction: row;
+  margin: 0;
 }
 
 
