--- a/main.css
+++ b/main.css
@@ -7,8 +7,8 @@
 
 .aside-left {
   background-color: #ffffff;
-  padding: 0 32px 0 45px;
-  max-width: 363px;
+  padding: 0 32px 0 32px;
+  max-width: 350px;
   border-right: 1px solid #d0d7de;
   max-height: 2000px;
 }
@@ -185,7 +185,7 @@ h1 {
   margin-bottom: 10px;
 }
 
-.writing{
+.card-title{
   margin-top: 32px;
   display: flex;
   justify-content: space-between;
@@ -206,6 +206,7 @@ h1 {
   height: 138px;
   justify-content: space-between;
   margin-top: 10px;
+  gap: 13px;
 }
 
 .block-bottom{
@@ -214,12 +215,13 @@ h1 {
   height: 226px;
   justify-content: space-between;
   margin-top: 10px;
+  gap: 13px;
 
 }
 
 .card{
   border: 1px solid #d0d7de;
-  /* padding: 0 8px; */
+  border-radius: 4px;
   width: 100%;
   height: 100%;
 }
@@ -227,8 +229,6 @@ h1 {
 .get-started{
 width: 50%;
 }
-
-
 
 .info{
   padding: 16px;
@@ -267,6 +267,12 @@ width: 50%;
 
 }
 
+.public-img{
+height: 24px;
+width: 24px;
+background-color: red;
+}
+
 .public{
 
 }
@@ -287,25 +293,24 @@ height: 28px;
 
 
 
+.inside-middle{
+  display: flex;
+  flex-direction: row;
+}
+
 .row{
   display: flex;
   flex-direction: row;
   margin: 0;
 }
 
-
-.profile-box{
-  display: flex;
-  height: 100%;
-  width: 100%;
-  border: 1px solid #d0d7de;
-  border-radius:5%;
-}
-
 .profile-box{
   display: flex;
   flex-direction: column;
-
+  height: 100%;
+  width: 100%;
+  border: 1px solid #d0d7de;
+  border-radius:6px;
 }
 
 h5{
@@ -351,8 +356,8 @@ h5{
 
 
 .num{
-  padding: 0 10px;
-  /* min-width: 36px; */
+  padding: 0 10px 0 17px;
+  color: #6e7781;
 }
 
 .iam-text{
