--- a/main.css
+++ b/main.css
@@ -69,6 +69,7 @@
   background-color: #f6f8fa;
  padding: 5px 12px;
  height: 32px;
+
 }
 
 .card-search{
@@ -197,6 +198,7 @@ h1 {
   display: flex;
  margin-top: 10px;
  gap: 13px;
+ box-sizing: border-box;
 
 }
 
@@ -207,6 +209,7 @@ h1 {
   justify-content: space-between;
   margin-top: 10px;
   gap: 13px;
+  box-sizing: border-box;
 }
 
 .block-bottom{
@@ -215,7 +218,9 @@ h1 {
   height: 226px;
   justify-content: space-between;
   margin-top: 10px;
+  margin-bottom: 32px;
   gap: 13px;
+  box-sizing: border-box;
 
 }
 
@@ -224,6 +229,7 @@ h1 {
   border-radius: 4px;
   width: 100%;
   height: 100%;
+  box-sizing: border-box;
 }
 
 .get-started{
@@ -305,6 +311,7 @@ height: 28px;
   margin: 0;
   padding: 0;
   flex-wrap: nowrap;
+  box-sizing: border-box;
 }
 
 .profile-box{
@@ -390,4 +397,30 @@ h5{
   width: 40px;
   padding: 0;
   margin: 0;
+}
+
+.tabs{
+  display: flex;
+  flex: 1;
+  background-color: antiquewhite;
+  border-bottom: solid 1px #afb8c1;
+  box-sizing: border-box;
+
+}
+
+.dashboard-button{
+  box-sizing: border-box;
+  border: none;
+  padding: 0 8px;
+  color: #24292f;
+  margin-bottom: 5px;
+}
+
+.beta{
+  border: solid 1px #1a7f37;
+  color: #1a7f37;
+  border-radius: 32px;
+  padding: 1px 4px;
+  font-weight: 500;
+  font-size: 12px;
 }
