--- a/main.css
+++ b/main.css
@@ -49,7 +49,10 @@
   font-size: 14px;
 }
 
-
+.small-text{
+  font-size: 12px;
+  color: #57606a;
+}
 
 .normal-text{
   font-size: 14px;
@@ -451,4 +454,54 @@ h5{
   width: 12px;
   background-color: #ff3e00;
   border-radius: 50%;
+}
+
+.star{
+ background-color: #f3f4f6;
+ border: 1px solid rgb(27, 31, 36, 0.15);
+ border-top-right-radius: 0;
+ border-bottom-right-radius: 0;
+ border-top-left-radius: 6px;
+ border-bottom-left-radius: 6px;
+ padding: 3px 12px;
+ font-size: 12px;
+}
+
+.star-button{
+  display: flex;
+  flex-direction: row;
+}
+
+.drop-button{
+  background-color: #f3f4f6;
+  border: 1px solid rgb(27, 31, 36, 0.15);
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+  border-top-right-radius: 6px;
+  border-bottom-right-radius: 6px;
+  padding: 3px 8px;
+}
+
+.title_and_button{
+display: flex;
+flex-direction: row;
+justify-content: space-between;
+}
+
+.feed-box{
+  margin-top: 8px;
+}
+
+.feed-links-big{
+  color: #24292f;
+  text-decoration: none;
+  font-weight: 600;
+  font-size: 16px;
+}
+
+.post-info{
+  margin-top: 18px;
+  margin-bottom: 0;
+  display: flex;
+  align-content: end;
 }
